--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -8,6 +8,18 @@
       "default": "Pinecone"
     }
   },
+  "navigation": {
+    "home": "Pinecone theater",
+    "immersivity": "Immersivity",
+    "team-cast": "Team & Cast",
+    "about-us": "About us",
+    "private-event": "Private event",
+    "contact-us": "Contact us"
+  },
+  "buttons": {
+    "book_table": "Book a table at out pineconebar",
+    "buy_ticket": "Buy a ticket"
+  },
   "pages": {
     "home": {
       "title": "Pinecone Theater",
@@ -45,6 +57,35 @@
             "The cast features actors Aleksandar Kecman, Milica Majkić, Julija Graut, Andrea Đina Ržaničanin, Kristina Kika Jovanović, Vedran Borovčanin, Maksim Mićković, Uroš Petronijević, and Nikola Pavlović, alongside opera singers Nevena Đoković and Nevena Matić. Harpist Sofija Sibinović performs live music throughout the show.",
             "The performance is in English and intended for adult audiences.",
             "Don't miss the chance to experience one of the most innovative theatrical events in the region!"
+          ]
+        }
+      ]
+    },
+    "about-us": {
+      "title": "Welcome to Pinecone Bar",
+      "textBlocks": [
+        {
+          "paragraphs": [
+            "Welcome to the enigmatic world of Pinecone Bar, nestled discreetly in the vibrant neighbourhood of Old City in Belgrade at the address Dalmatinska 5 (now Vladete Jerotića 5), Pinecone Bar, housed in an early 20th-century building, stands as a tribute to the rich history, lovingly restored to its former glory.  Here, amidst the vibrant city streets, mystery and splendour converge to create an unforgettable experience. Our first bar in Belgrade pays homage to the iconic past of its surroundings while embracing the dynamic evolution of the local artistic scene.",
+            "Step into an era of opulence and intrigue, where whispers of secret meetings and agendas linger. Our bar exudes an aura of old-world charm, reminiscent of ancient Greece's elegance and secret societies' allure. Located in the city centre, this speakeasy bar beckons to those with a taste for extraordinary adventure.",
+            "Our selection of tantalizing cocktails, expertly crafted to intrigue the senses and ignite the imagination, offers something you have never tried. Crafted with the finest ingredients and a touch of magic, these libations will transport you to a world of wonder and intrigue. Our interactive service ensures that every moment spent at Pinecone Bar is an unforgettable journey, where guests become part of the narrative and the night unfolds like a thrilling tale.",
+            "Stepping  through the doors of Pinecone Bar, guests are transported back in time, greeted by a mosaic floor in the entrance, reminiscent of eclectic aesthetics, and wooden stairs that lead to the second floor. The walls are adorned with artwork, stained glass, and sculptural chandeliers, creating a wonderful atmosphere.",
+            "At the heart of Pinecone Bar lies a charming courtyard garden, a tranquil oasis in the bustling cityscape. Here, contemporary comforts blend with Greek charm.",
+            "Pinecone Bar stands as a testament to the enduring allure of old tales, where tradition and innovation intertwines to create an unforgettable escape for the curious ones."
+          ]
+        }
+      ]
+    },
+    "immersivity": {
+      "title": "Immersivity",
+      "textBlocks": [
+        {
+          "paragraphs": [
+            "Immersive theater transcends traditional stage boundaries to offer a groundbreaking approach to storytelling. Here, the line between performer and audience blurs, allowing you to step inside the story and become an essential part of its unfolding. As you enter our immersive space, you are not just stepping into a venue; you are stepping into the narrative itself, surrounded by a world meticulously crafted to captivate all your senses.",
+            "Each visit promises a unique journey. In this interactive realm, the story envelopes you, inviting you to navigate through vivid scenes, interact with characters, and sometimes even alter the storyline. This level of engagement is designed to forge a personal connection with the narrative, transforming each performance into a distinct, memorable adventure.",
+            "Our actors navigate the space around and with you, creating a fluid and dynamic performance that makes you a co-creator of the unfolding drama. This intense interaction deepens the emotional impact, making every reaction and interaction feel genuine and impactful. You are encouraged to touch, taste, and fully immerse yourself in the environment, which heightens the sensory experience and ensures that no two visits are alike.",
+            "The unpredictable nature of immersive theater means that each performance is unique, shaped by the collective actions and decisions of its participants. The storyline adapts in real-time, responding to its audience—turning the theater into a living, responsive experience. This dynamic form of entertainment not only entertains but also invites you to step outside your usual boundaries, explore uncharted territories, and gain fresh perspectives.",
+            "In immersive theater, you don’t just watch a story—you live it. Join us for an experience that extends beyond viewing, touching the core of your senses and emotions, and leaving you with an unforgettable imprint of the tales we tell.",
           ]
         }
       ]
