переработал анимацию для карточек

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -142,7 +142,7 @@
       "text": "We feel jealousy when we meet someone successful, yet we never ask what lies behind the façade. Where do the roots of tremendous success grow? Ambition? Desire? Or just vast suffering? Every story of triumph has a dark side.",
       "quote": "\"Over the past three years in Belgrade, she has established herself in the local industry...\""
     },
-    "nevena_djokovic": {
+    "nevena_dokovic": {
       "name": "Nevena Đoković",
       "text": "To be loved and cared for—isn’t that the key to happiness? But what if you must give love and care without receiving anything in return? Would you self-sacrifice, or would you grow up? Or perhaps, over time, you would transform into someone cold and distant?",
       "quote": "\"From January 2022, she has been playing the main female role in the cult play Phantom of the Opera at the Terazije Theater...\""
